[FIX] website_sale: remove scroll visibilty in filter
When filtering column had too much attributes, scrollbar
would appear. Scrollbar was deleted but ability to scroll
is left.

task-3609062

--- a/addons/website_sale/static/src/scss/website_sale.scss
+++ b/addons/website_sale/static/src/scss/website_sale.scss
@@ -110,6 +110,16 @@ $o-wsale-products-layout-grid-gutter-width: min($grid-gutter-width / 2, $o-wsale
         cursor: -webkit-grabbing;
     }
 
+    .o_wsale_products_grid_before_rail{
+        scrollbar-width: none;
+        -ms-overflow-style: none;
+    }
+
+    .o_wsale_products_grid_before_rail::-webkit-scrollbar {
+        width: 0;
+        height: 0;
+    }
+
     .o_payment_form .card {
         border-radius: 4px !important;
     }
